--- a/tutorials/basic/task-hello-world/task_hello_world.yml
+++ b/tutorials/basic/task-hello-world/task_hello_world.yml
@@ -4,7 +4,14 @@ platform: linux
 image_resource:
   type: docker-image
   source: {repository: busybox}
+inputs:
+  - name: resource-tutorial
 
 run:
-  path: echo
-  args: [hello world]
+  path: /bin/sh
+  args: 
+    - -exc
+    - |
+      echo "Hello world"
+      cd resource-tutorial
+      ls -ltr
